--- a/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
+++ b/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
@@ -6,11 +6,10 @@
    "metadata": {},
    "source": [
     "\n",
-    "# 🧪 RAG Chatbot (Colab, Private) — PDF → Preprocess → Index → Ask\n",
+    "# RAG Chatbot (Colab, Private) — PDF → Preprocess → Index → Ask\n",
     "**Purpose:** Quickly experience a Retrieval‑Augmented Generation (RAG) flow entirely inside a Colab/Jupyter notebook without exposing a public URL.  \n",
     "**Stack:** `ipywidgets` UI, `pypdf` for extraction, `scikit-learn` for vector search, Google **Gemini** API for embeddings & generation.\n",
     "\n",
-    "> **Tip:** In Colab, set your key with: `import os; os.environ[\"GOOGLE_API_KEY\"] = \"YOUR_KEY_HERE\"`  \n",
     "> This notebook looks for the environment variable `GOOGLE_API_KEY`.\n"
    ]
   },
@@ -28,7 +27,6 @@
     "from dataclasses import dataclass\n",
     "from typing import List, Dict, Any, Tuple\n",
     "\n",
-    "import google.generativeai as genai\n",
     "from pypdf import PdfReader\n",
     "from reportlab.pdfgen import canvas\n",
     "from reportlab.lib.pagesizes import letter\n",
@@ -57,7 +55,7 @@
     "    _GEMINI_READY = False\n",
     "\n",
     "GENERATION_MODEL = \"gemini-2.5-flash-lite\"   # You can change to another available model\n",
-    "EMBED_MODEL      = \"text-embedding-004\""
+    "EMBED_MODEL      = \"gemini-embedding-001\""
    ]
   },
   {
@@ -180,24 +178,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def embed_texts(texts):\n",
-    "    embeddings = []\n",
+    "def _to_1d(vec):\n",
+    "    \"\"\"Ensure a single embedding is 1D; mean-pool if it's 2D.\"\"\"\n",
+    "    import numpy as np\n",
+    "    arr = np.asarray(vec, dtype=float)\n",
+    "    if arr.ndim == 1:\n",
+    "        return arr\n",
+    "    if arr.ndim == 2:\n",
+    "        return arr.mean(axis=0)  # mean-pool tokens/segments\n",
+    "    # If something weirder shows up, flatten as last resort:\n",
+    "    return arr.reshape(-1)\n",
+    "\n",
+    "def embed_texts(texts, model=EMBED_MODEL):\n",
+    "    \"\"\"\n",
+    "    Robust embedding helper for google-generativeai embed_content.\n",
+    "    Returns: np.ndarray of shape (N, D)\n",
+    "    \"\"\"\n",
+    "    import numpy as np\n",
+    "    if isinstance(texts, str):\n",
+    "        texts = [texts]\n",
+    "\n",
+    "    all_vecs = []\n",
     "    B = 64\n",
     "    for i in range(0, len(texts), B):\n",
     "        batch = texts[i:i+B]\n",
-    "        resp = genai.embed_content(model=\"text-embedding-004\", content=batch)\n",
-    "        vecs = [r[\"embedding\"] for r in resp[\"embedding\"]]\n",
-    "        embeddings.extend(vecs)\n",
-    "    return np.array(embeddings, dtype=np.float32)\n",
+    "        resp = genai.embed_content(model=model, content=batch)\n",
+    "\n",
+    "        vecs = []\n",
+    "        # dict-like\n",
+    "        if isinstance(resp, dict):\n",
+    "            # Batch: {\"embeddings\": [{\"values\":[...]} | {\"embedding\":{\"values\":[...]}} , ...]}\n",
+    "            if \"embeddings\" in resp:\n",
+    "                for item in resp[\"embeddings\"]:\n",
+    "                    if isinstance(item, dict):\n",
+    "                        if \"values\" in item:\n",
+    "                            vecs.append(_to_1d(item[\"values\"]))\n",
+    "                        elif \"embedding\" in item:\n",
+    "                            emb = item[\"embedding\"]\n",
+    "                            vals = emb.get(\"values\", emb)\n",
+    "                            vecs.append(_to_1d(vals))\n",
+    "                    else:\n",
+    "                        vecs.append(_to_1d(item))\n",
+    "            # Single: {\"embedding\":{\"values\":[...]}} or {\"embedding\":[...]}\n",
+    "            elif \"embedding\" in resp:\n",
+    "                emb = resp[\"embedding\"]\n",
+    "                vals = emb.get(\"values\", emb) if isinstance(emb, dict) else emb\n",
+    "                vecs.append(_to_1d(vals))\n",
+    "        else:\n",
+    "            # object-like\n",
+    "            if hasattr(resp, \"embeddings\"):\n",
+    "                for item in resp.embeddings:\n",
+    "                    vals = getattr(item, \"values\", None)\n",
+    "                    if vals is None and hasattr(item, \"embedding\"):\n",
+    "                        vals = getattr(item.embedding, \"values\", item.embedding)\n",
+    "                    vecs.append(_to_1d(vals))\n",
+    "            elif hasattr(resp, \"embedding\"):\n",
+    "                emb = getattr(resp, \"embedding\")\n",
+    "                vals = getattr(emb, \"values\", emb)\n",
+    "                vecs.append(_to_1d(vals))\n",
+    "\n",
+    "        if not vecs:\n",
+    "            raise RuntimeError(f\"Embedding response missing vectors. Raw: {resp}\")\n",
+    "        all_vecs.extend(vecs)\n",
+    "\n",
+    "    X = np.vstack(all_vecs)  # (N, D)\n",
+    "    # Sanity check: must be 2D\n",
+    "    if X.ndim != 2:\n",
+    "        raise RuntimeError(f\"Expected 2D array after normalization, got shape {X.shape}\")\n",
+    "    return X\n",
     "\n",
     "class SimpleVectorIndex:\n",
     "    def __init__(self, embeddings, meta):\n",
-    "        self.embeddings = embeddings\n",
+    "        self.embeddings = np.asarray(embeddings)\n",
     "        self.meta = meta\n",
-    "        self.nn = NearestNeighbors(n_neighbors=10, metric=\"cosine\")\n",
+    "        self.n = self.embeddings.shape[0]\n",
+    "        # Use at least 1 neighbor, but don't ask for more than we have\n",
+    "        n_neighbors = max(1, min(10, self.n))\n",
+    "        self.nn = NearestNeighbors(n_neighbors=n_neighbors, metric=\"cosine\")\n",
     "        self.nn.fit(self.embeddings)\n",
+    "\n",
     "    def search(self, query_vec, top_k=5):\n",
-    "        distances, indices = self.nn.kneighbors(query_vec.reshape(1, -1), n_neighbors=top_k)\n",
+    "        # Cap K to available samples\n",
+    "        k = max(1, min(top_k, self.n))\n",
+    "        if self.n == 1:\n",
+    "            # With 1 sample, it's the only neighbor; similarity = 1 - distance (distance=0 to itself)\n",
+    "            return [(0, 1.0)]\n",
+    "        distances, indices = self.nn.kneighbors(\n",
+    "            np.asarray(query_vec).reshape(1, -1),\n",
+    "            n_neighbors=k\n",
+    "        )\n",
     "        results = []\n",
     "        for d, idx in zip(distances[0], indices[0]):\n",
     "            results.append((int(idx), float(1.0 - d)))\n",
@@ -236,13 +305,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c22931a",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Demo workflow\n",
+    "1. **Load a PDF** by uploading or pasting a URL (or rely on a default FERPA PDF).  \n",
+    "2. Click **Preprocess & Chunk** and then **Build Index**.  \n",
+    "3. Ask: *What is FERPA?”* (or any relevant question).  \n",
+    "\n",
+    "> Tweak chunk size, overlap, and Top‑K to see how retrieval quality changes.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3f8d8f04",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Widgets ---\n",
+    "# Widgets\n",
     "upload = widgets.FileUpload(accept=\".pdf\", multiple=False)\n",
     "url_input = widgets.Text(\n",
     "    value=\"\",\n",
@@ -264,16 +347,16 @@
     "answer_out = widgets.Output(layout={'border': '1px solid #ddd'})\n",
     "\n",
     "display(widgets.VBox([\n",
-    "    widgets.HTML(\"<h3>📄 Load a PDF</h3>\"),\n",
+    "    widgets.HTML(\"<h3>Load a PDF</h3>\"),\n",
     "    widgets.HBox([upload]),\n",
     "    url_input,\n",
     "    load_btn,\n",
     "    status_out,\n",
-    "    widgets.HTML(\"<h3>🧰 Preprocess</h3>\"),\n",
+    "    widgets.HTML(\"<h3>Preprocess</h3>\"),\n",
     "    chunk_slider, overlap_slider, prep_btn, prep_out,\n",
-    "    widgets.HTML(\"<h3>🔎 Index</h3>\"),\n",
+    "    widgets.HTML(\"<h3>Index</h3>\"),\n",
     "    topk_slider, index_btn, search_out,\n",
-    "    widgets.HTML(\"<h3>💬 Ask</h3>\"),\n",
+    "    widgets.HTML(\"<h3>Ask</h3>\"),\n",
     "    q_input, ask_btn, answer_out\n",
     "]))\n",
     "\n",
@@ -292,20 +375,16 @@
     "            pages = pdf_to_pages(pdf_bytes)\n",
     "            STATE[\"source_label\"] = src\n",
     "            STATE[\"pages\"] = pages\n",
-    "            print(f\"✅ Loaded PDF from: {src}\")\n",
+    "            print(f\"Loaded PDF from: {src}\")\n",
     "            print(f\"   Pages extracted: {len(pages)}\")\n",
-    "            if len(pages) and pages[0].text[:200].strip():\n",
-    "                print(f\"   First 200 chars: {pages[0].text[:200]}...\")\n",
-    "            else:\n",
-    "                print(\"   (Warning) First page seems to have little or no extractable text.\")\n",
     "        except Exception as e:\n",
-    "            print(f\"❌ Load failed: {e}\")\n",
+    "            print(f\"Load failed: {e}\")\n",
     "\n",
     "def on_prep_clicked(_):\n",
     "    prep_out.clear_output()\n",
     "    with prep_out:\n",
     "        if not STATE[\"pages\"]:\n",
-    "            print(\"⚠️ No PDF loaded yet.\")\n",
+    "            print(\"No PDF loaded yet.\")\n",
     "            return\n",
     "        chunk_chars = int(chunk_slider.value)\n",
     "        overlap = int(overlap_slider.value)\n",
@@ -320,78 +399,146 @@
     "                meta.append({\"source\": src, \"page\": p.page_num, \"text\": c})\n",
     "        STATE[\"chunks\"] = chunks\n",
     "        STATE[\"chunk_meta\"] = meta\n",
-    "        print(f\"✅ Created {len(chunks)} chunks across {len(STATE['pages'])} pages.\")\n",
-    "        for i in range(min(3, len(chunks))):\n",
-    "            print(f\"\\n--- Chunk {i+1} (p.{meta[i]['page']}) ---\\n{chunks[i][:400]}...\")\n",
+    "        print(f\"Created {len(chunks)} chunks across {len(STATE['pages'])} pages.\")\n",
     "\n",
     "def on_index_clicked(_):\n",
     "    search_out.clear_output()\n",
     "    with search_out:\n",
     "        if not STATE[\"chunks\"]:\n",
-    "            print(\"⚠️ No chunks to index. Run preprocessing first.\")\n",
+    "            print(\"No chunks to index. Run preprocessing first.\")\n",
     "            return\n",
     "        try:\n",
-    "            print(\"🔄 Embedding chunks... (this may take a moment)\")\n",
+    "            print(\"Embedding chunks... (this may take a moment)\")\n",
     "            emb = embed_texts(STATE[\"chunks\"])\n",
     "            idx = SimpleVectorIndex(emb, STATE[\"chunk_meta\"])\n",
     "            STATE[\"emb\"] = emb\n",
     "            STATE[\"index\"] = idx\n",
-    "            print(f\"✅ Index built with shape {emb.shape}.\")\n",
+    "            print(f\"Index built with shape {emb.shape}.\")\n",
     "        except Exception as e:\n",
-    "            print(f\"❌ Index build failed: {e}\")\n",
+    "            print(f\"Index build failed: {e}\")\n",
     "\n",
-    "def on_ask_clicked(_):\n",
-    "    answer_out.clear_output()\n",
-    "    with answer_out:\n",
-    "        if not STATE[\"index\"]:\n",
-    "            print(\"⚠️ Build the index first.\")\n",
-    "            return\n",
-    "        if not q_input.value.strip():\n",
-    "            print(\"⚠️ Enter a question.\")\n",
-    "            return\n",
-    "        q = q_input.value.strip()\n",
-    "        try:\n",
-    "            qvec = embed_texts([q])[0]\n",
-    "            results = STATE[\"index\"].search(qvec, top_k=int(topk_slider.value))\n",
-    "            snippets = []\n",
-    "            for idx, sim in results:\n",
-    "                m = STATE[\"chunk_meta\"][idx]\n",
-    "                snippets.append({\"source\": m[\"source\"], \"page\": m[\"page\"], \"text\": m[\"text\"], \"score\": sim})\n",
-    "            context = build_context(snippets)\n",
-    "            print(\"🔎 Top matches:\")\n",
-    "            for s in snippets[:3]:\n",
-    "                print(f\"  - p.{s['page']} (sim≈{s['score']:.3f})\")\n",
-    "            print(\"\\n🤖 Answer:\")\n",
-    "            ans = answer_with_gemini(q, context)\n",
-    "            display(Markdown(ans))\n",
-    "            print(\"\\n📚 Context used (truncated):\\n\", context[:1000], \"...\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"❌ Q&A failed: {e}\")\n",
+    "def on_ask(q_input):\n",
+    "    if not STATE[\"index\"]:\n",
+    "        print(\"Build the index first.\")\n",
+    "        return\n",
+    "    if not q_input:\n",
+    "        print(\"Enter a question.\")\n",
+    "        return\n",
+    "    q = q_input\n",
+    "    answer_out = ''\n",
+    "\n",
+    "    try:\n",
+    "        qvec = embed_texts([q])[0]\n",
+    "        results = STATE[\"index\"].search(qvec, top_k=int(topk_slider.value))\n",
+    "        snippets = []\n",
+    "        for idx, sim in results:\n",
+    "            m = STATE[\"chunk_meta\"][idx]\n",
+    "            snippets.append({\"source\": m[\"source\"], \"page\": m[\"page\"], \"text\": m[\"text\"], \"score\": sim})\n",
+    "        context = build_context(snippets)\n",
+    "        answer_out += \"Top matches:\\n\"\n",
+    "        for s in snippets[:3]:\n",
+    "            answer_out += f\"  - p.{s['page']} (sim≈{s['score']:.3f})\\n\"\n",
+    "        answer_out += \"\\nAnswer:\\n\"\n",
+    "        ans = answer_with_gemini(q, context)\n",
+    "        answer_out += f\"{ans}\\n\"\n",
+    "        answer_out += f\"\\nContext used (truncated):\\n{context[:1000]}...\\n\"\n",
+    "        return answer_out\n",
+    "    except Exception as e:\n",
+    "        return f\"Q&A failed: {e}\"\n",
     "\n",
     "load_btn.on_click(on_load_clicked)\n",
     "prep_btn.on_click(on_prep_clicked)\n",
-    "index_btn.on_click(on_index_clicked)\n",
-    "ask_btn.on_click(on_ask_clicked)"
+    "index_btn.on_click(on_index_clicked)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5c22931a",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61ddc8a2",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "chat_box = widgets.Output()\n",
+    "input_box = widgets.Text(placeholder=\"Type a message and press Enter…\")\n",
+    "send_btn = widgets.Button(description=\"Send\")\n",
     "\n",
-    "## 🔬 Quick-Start\n",
-    "1. **Load a PDF** by uploading or pasting a URL (or rely on a default public Creative Commons license PDF).  \n",
-    "2. Click **Preprocess & Chunk** and then **Build Index**.  \n",
-    "3. Ask: *“How many weeks of parental leave?”* (or any relevant policy question).  \n",
+    "history = []  # list of (user, assistant)\n",
     "\n",
-    "> Tweak chunk size, overlap, and Top‑K to see how retrieval quality changes.\n"
+    "def render_chat():\n",
+    "    chat_box.clear_output()\n",
+    "    with chat_box:\n",
+    "        for u, a in history:\n",
+    "            display(Markdown(f\"**You:** {u}\"))\n",
+    "            display(Markdown(f\"**Bot:** {a}\"))\n",
+    "\n",
+    "def send_message(_=None):\n",
+    "    user_msg = input_box.value.strip()\n",
+    "    if not user_msg:\n",
+    "        return\n",
+    "    input_box.value = \"\"\n",
+    "\n",
+    "    # Generate a reply (switch to a simple echo by replacing the following with: bot_msg = f\\\"Echo: {user_msg}\\\")\n",
+    "    context = \"\\n\".join([f\"User: {u}\\nAssistant: {a}\" for u, a in history])\n",
+    "    prompt = (context + f\"\\nUser: {user_msg}\\nAssistant:\").strip()\n",
+    "\n",
+    "    try:\n",
+    "        resp = on_ask(prompt)\n",
+    "        bot_msg = resp or \"(no response)\"\n",
+    "    except Exception as e:\n",
+    "        bot_msg = f\"(error) {e}\"\n",
+    "\n",
+    "    history.append((user_msg, bot_msg))\n",
+    "    render_chat()\n",
+    "\n",
+    "send_btn.on_click(send_message)\n",
+    "input_box.on_submit(send_message)\n",
+    "\n",
+    "display(widgets.VBox([chat_box, widgets.HBox([input_box, send_btn])]))\n",
+    "render_chat()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d01ade1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70a00bef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ed6c99b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.13.7)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
