--- a/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
+++ b/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
@@ -14,6 +14,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31f2fdf4",
+   "metadata": {},
+   "source": [
+    "## Imports & Installs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3bb899ed",
@@ -39,6 +47,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb750a36",
+   "metadata": {},
+   "source": [
+    "## Gemini API Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "75b1e280",
@@ -56,6 +72,14 @@
     "\n",
     "GENERATION_MODEL = \"gemini-2.5-flash-lite\"   # You can change to another available model\n",
     "EMBED_MODEL      = \"gemini-embedding-001\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f50da98e",
+   "metadata": {},
+   "source": [
+    "## Default PDF Download & Sample Generation"
    ]
   },
   {
@@ -133,6 +157,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3bdd7b48",
+   "metadata": {},
+   "source": [
+    "## PDF to Pages & Chunking"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e7b6ee34",
@@ -169,6 +201,14 @@
     "            break\n",
     "        i = end - overlap if end - overlap > i else end\n",
     "    return chunks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b664390b",
+   "metadata": {},
+   "source": [
+    "## Embedding & Vector Indexing"
    ]
   },
   {
@@ -274,6 +314,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a1f4b90",
+   "metadata": {},
+   "source": [
+    "## RAG Prompt & Answer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1008c409",
@@ -338,13 +386,10 @@
     "load_btn = widgets.Button(description=\"1) Load PDF\", button_style=\"primary\")\n",
     "prep_btn = widgets.Button(description=\"2) Preprocess & Chunk\", button_style=\"warning\")\n",
     "index_btn = widgets.Button(description=\"3) Build Index\", button_style=\"info\")\n",
-    "q_input = widgets.Text(placeholder=\"Ask a question… (e.g., 'How many weeks of parental leave?')\", description=\"Question:\")\n",
-    "ask_btn = widgets.Button(description=\"4) Ask\", button_style=\"success\")\n",
     "\n",
     "status_out = widgets.Output()\n",
     "prep_out = widgets.Output(layout={'border': '1px solid #ddd'})\n",
     "search_out = widgets.Output(layout={'border': '1px solid #ddd'})\n",
-    "answer_out = widgets.Output(layout={'border': '1px solid #ddd'})\n",
     "\n",
     "display(widgets.VBox([\n",
     "    widgets.HTML(\"<h3>Load a PDF</h3>\"),\n",
@@ -356,8 +401,6 @@
     "    chunk_slider, overlap_slider, prep_btn, prep_out,\n",
     "    widgets.HTML(\"<h3>Index</h3>\"),\n",
     "    topk_slider, index_btn, search_out,\n",
-    "    widgets.HTML(\"<h3>Ask</h3>\"),\n",
-    "    q_input, ask_btn, answer_out\n",
     "]))\n",
     "\n",
     "STATE = {\"source_label\": None, \"pages\": [], \"chunks\": [], \"chunk_meta\": [], \"emb\": None, \"index\": None}\n",
@@ -414,6 +457,7 @@
     "            STATE[\"emb\"] = emb\n",
     "            STATE[\"index\"] = idx\n",
     "            print(f\"Index built with shape {emb.shape}.\")\n",
+    "            print(\"Ready to answer questions. Next cell will display the chat interface.\")\n",
     "        except Exception as e:\n",
     "            print(f\"Index build failed: {e}\")\n",
     "\n",
@@ -449,6 +493,14 @@
     "load_btn.on_click(on_load_clicked)\n",
     "prep_btn.on_click(on_prep_clicked)\n",
     "index_btn.on_click(on_index_clicked)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c52a7e0",
+   "metadata": {},
+   "source": [
+    "## Chat Interface"
    ]
   },
   {
@@ -496,30 +548,6 @@
     "display(widgets.VBox([chat_box, widgets.HBox([input_box, send_btn])]))\n",
     "render_chat()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d01ade1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70a00bef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ed6c99b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
