--- a/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
+++ b/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
@@ -383,23 +383,25 @@
     "chunk_slider = widgets.IntSlider(value=1200, min=400, max=3000, step=100, description=\"Chunk size\")\n",
     "overlap_slider = widgets.IntSlider(value=200, min=0, max=800, step=50, description=\"Overlap\")\n",
     "topk_slider = widgets.IntSlider(value=5, min=1, max=10, step=1, description=\"Top-K\")\n",
-    "load_btn = widgets.Button(description=\"1) Load PDF\", button_style=\"primary\")\n",
-    "prep_btn = widgets.Button(description=\"2) Preprocess & Chunk\", button_style=\"warning\")\n",
-    "index_btn = widgets.Button(description=\"3) Build Index\", button_style=\"info\")\n",
+    "load_btn = widgets.Button(description=\"Load PDF\", button_style=\"primary\")\n",
+    "prep_btn = widgets.Button(description=\"Preprocess & Chunk\", button_style=\"warning\")\n",
+    "index_btn = widgets.Button(description=\"Build\", button_style=\"info\")\n",
     "\n",
-    "status_out = widgets.Output()\n",
+    "status_out = widgets.Output(layout={'border': '1px solid #ddd'})\n",
     "prep_out = widgets.Output(layout={'border': '1px solid #ddd'})\n",
     "search_out = widgets.Output(layout={'border': '1px solid #ddd'})\n",
     "\n",
     "display(widgets.VBox([\n",
-    "    widgets.HTML(\"<h3>Load a PDF</h3>\"),\n",
+    "    widgets.HTML(\"<h3>1) Load a PDF</h3>\"),\n",
+    "    widgets.HTML(\"Upload a PDF file or provide a URL to a publicly accessible PDF. If both are provided, the uploaded file is used.\"),\n",
+    "    widgets.HTML(\"Tip: If no PDF is provided, a sample FERPA policy will be used.\"),\n",
     "    widgets.HBox([upload]),\n",
     "    url_input,\n",
     "    load_btn,\n",
     "    status_out,\n",
-    "    widgets.HTML(\"<h3>Preprocess</h3>\"),\n",
+    "    widgets.HTML(\"<h3>2) Preprocess PDF</h3>\"),\n",
     "    chunk_slider, overlap_slider, prep_btn, prep_out,\n",
-    "    widgets.HTML(\"<h3>Index</h3>\"),\n",
+    "    widgets.HTML(\"<h3>3) Build Index</h3>\"),\n",
     "    topk_slider, index_btn, search_out,\n",
     "]))\n",
     "\n",
