--- a/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
+++ b/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "\n",
     "# RAG Chatbot (Colab, Private) — PDF → Preprocess → Index → Ask\n",
-    "**Purpose:** Quickly experience a Retrieval‑Augmented Generation (RAG) flow entirely inside a Colab/Jupyter notebook without exposing a public URL.  \n",
+    "**Purpose:** Quickly experience a Retrieval‑Augmented Generation (RAG) flow entirely inside a Colab/Jupyter notebook.  \n",
     "**Stack:** `ipywidgets` UI, `pypdf` for extraction, `scikit-learn` for vector search, Google **Gemini** API for embeddings & generation.\n",
     "\n",
     "> This notebook looks for the environment variable `GOOGLE_API_KEY`.\n"
@@ -30,7 +30,7 @@
    "source": [
     "!pip -q install google-generativeai pypdf scikit-learn ipywidgets reportlab\n",
     "\n",
-    "import os, io, json, math, time, requests, textwrap, tempfile\n",
+    "import os, io, requests, textwrap, tempfile\n",
     "from pathlib import Path\n",
     "from dataclasses import dataclass\n",
     "from typing import List, Dict, Any, Tuple\n",
@@ -70,7 +70,7 @@
     "    print(\"Install google-generativeai to enable live calls.\")\n",
     "    _GEMINI_READY = False\n",
     "\n",
-    "GENERATION_MODEL = \"gemini-2.5-flash-lite\"   # You can change to another available model\n",
+    "GENERATION_MODEL = \"gemini-2.5-flash-lite\"\n",
     "EMBED_MODEL      = \"gemini-embedding-001\""
    ]
   },
@@ -171,7 +171,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataclasses import dataclass\n",
     "@dataclass\n",
     "class PageText:\n",
     "    page_num: int\n",
@@ -348,7 +347,7 @@
     "\n",
     "def answer_with_gemini(question: str, context: str):\n",
     "    prompt = f\"{RAG_SYSTEM_PROMPT}\\n\\nContext:\\n{context}\\n\\nQuestion: {question}\\nAnswer:\"\n",
-    "    resp = genai.GenerativeModel(\"gemini-2.5-flash-lite\").generate_content(prompt)\n",
+    "    resp = genai.GenerativeModel(GENERATION_MODEL).generate_content(prompt)\n",
     "    return resp.text or \"(no response)\""
    ]
   },
@@ -465,11 +464,9 @@
     "\n",
     "def on_ask(q_input):\n",
     "    if not STATE[\"index\"]:\n",
-    "        print(\"Build the index first.\")\n",
-    "        return\n",
+    "        return \"Error - Build the index first.\"\n",
     "    if not q_input:\n",
-    "        print(\"Enter a question.\")\n",
-    "        return\n",
+    "        return \"Enter a question.\"\n",
     "    q = q_input\n",
     "    answer_out = ''\n",
     "\n",
