--- a/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
+++ b/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
@@ -217,98 +217,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _to_1d(vec):\n",
-    "    \"\"\"Ensure a single embedding is 1D; mean-pool if it's 2D.\"\"\"\n",
-    "    import numpy as np\n",
-    "    arr = np.asarray(vec, dtype=float)\n",
-    "    if arr.ndim == 1:\n",
-    "        return arr\n",
-    "    if arr.ndim == 2:\n",
-    "        return arr.mean(axis=0)  # mean-pool tokens/segments\n",
-    "    # If something weirder shows up, flatten as last resort:\n",
-    "    return arr.reshape(-1)\n",
-    "\n",
     "def embed_texts(texts, model=EMBED_MODEL):\n",
-    "    \"\"\"\n",
-    "    Robust embedding helper for google-generativeai embed_content.\n",
-    "    Returns: np.ndarray of shape (N, D)\n",
-    "    \"\"\"\n",
-    "    import numpy as np\n",
     "    if isinstance(texts, str):\n",
     "        texts = [texts]\n",
-    "\n",
-    "    all_vecs = []\n",
-    "    B = 64\n",
-    "    for i in range(0, len(texts), B):\n",
-    "        batch = texts[i:i+B]\n",
-    "        resp = genai.embed_content(model=model, content=batch)\n",
-    "\n",
-    "        vecs = []\n",
-    "        # dict-like\n",
-    "        if isinstance(resp, dict):\n",
-    "            # Batch: {\"embeddings\": [{\"values\":[...]} | {\"embedding\":{\"values\":[...]}} , ...]}\n",
-    "            if \"embeddings\" in resp:\n",
-    "                for item in resp[\"embeddings\"]:\n",
-    "                    if isinstance(item, dict):\n",
-    "                        if \"values\" in item:\n",
-    "                            vecs.append(_to_1d(item[\"values\"]))\n",
-    "                        elif \"embedding\" in item:\n",
-    "                            emb = item[\"embedding\"]\n",
-    "                            vals = emb.get(\"values\", emb)\n",
-    "                            vecs.append(_to_1d(vals))\n",
-    "                    else:\n",
-    "                        vecs.append(_to_1d(item))\n",
-    "            # Single: {\"embedding\":{\"values\":[...]}} or {\"embedding\":[...]}\n",
-    "            elif \"embedding\" in resp:\n",
-    "                emb = resp[\"embedding\"]\n",
-    "                vals = emb.get(\"values\", emb) if isinstance(emb, dict) else emb\n",
-    "                vecs.append(_to_1d(vals))\n",
+    "    rows = []\n",
+    "    for t in texts:\n",
+    "        resp = genai.embed_content(model=model, content=t)\n",
+    "        emb = resp.get(\"embedding\", resp)\n",
+    "        if isinstance(emb, dict) and \"values\" in emb:\n",
+    "            v = emb[\"values\"]\n",
     "        else:\n",
-    "            # object-like\n",
-    "            if hasattr(resp, \"embeddings\"):\n",
-    "                for item in resp.embeddings:\n",
-    "                    vals = getattr(item, \"values\", None)\n",
-    "                    if vals is None and hasattr(item, \"embedding\"):\n",
-    "                        vals = getattr(item.embedding, \"values\", item.embedding)\n",
-    "                    vecs.append(_to_1d(vals))\n",
-    "            elif hasattr(resp, \"embedding\"):\n",
-    "                emb = getattr(resp, \"embedding\")\n",
-    "                vals = getattr(emb, \"values\", emb)\n",
-    "                vecs.append(_to_1d(vals))\n",
-    "\n",
-    "        if not vecs:\n",
-    "            raise RuntimeError(f\"Embedding response missing vectors. Raw: {resp}\")\n",
-    "        all_vecs.extend(vecs)\n",
-    "\n",
-    "    X = np.vstack(all_vecs)  # (N, D)\n",
-    "    # Sanity check: must be 2D\n",
+    "            v = emb\n",
+    "        rows.append(np.asarray(v, dtype=float))\n",
+    "    X = np.vstack(rows)\n",
     "    if X.ndim != 2:\n",
-    "        raise RuntimeError(f\"Expected 2D array after normalization, got shape {X.shape}\")\n",
+    "        raise RuntimeError(f\"Expected 2D embeddings, got {X.shape}\")\n",
     "    return X\n",
     "\n",
     "class SimpleVectorIndex:\n",
     "    def __init__(self, embeddings, meta):\n",
-    "        self.embeddings = np.asarray(embeddings)\n",
+    "        self.embeddings = np.asarray(embeddings, dtype=float)\n",
+    "        if self.embeddings.ndim != 2:\n",
+    "            raise ValueError(f\"embeddings must be 2D, got {self.embeddings.shape}\")\n",
     "        self.meta = meta\n",
     "        self.n = self.embeddings.shape[0]\n",
-    "        # Use at least 1 neighbor, but don't ask for more than we have\n",
+    "\n",
     "        n_neighbors = max(1, min(10, self.n))\n",
     "        self.nn = NearestNeighbors(n_neighbors=n_neighbors, metric=\"cosine\")\n",
     "        self.nn.fit(self.embeddings)\n",
     "\n",
     "    def search(self, query_vec, top_k=5):\n",
-    "        # Cap K to available samples\n",
-    "        k = max(1, min(top_k, self.n))\n",
+    "        q = np.asarray(query_vec, dtype=float).reshape(1, -1)\n",
+    "        k = max(1, min(int(top_k), self.n))\n",
+    "\n",
+    "        # Fast-path for single-item indexes\n",
     "        if self.n == 1:\n",
-    "            # With 1 sample, it's the only neighbor; similarity = 1 - distance (distance=0 to itself)\n",
     "            return [(0, 1.0)]\n",
-    "        distances, indices = self.nn.kneighbors(\n",
-    "            np.asarray(query_vec).reshape(1, -1),\n",
-    "            n_neighbors=k\n",
-    "        )\n",
+    "\n",
+    "        distances, indices = self.nn.kneighbors(q, n_neighbors=k)\n",
     "        results = []\n",
     "        for d, idx in zip(distances[0], indices[0]):\n",
-    "            results.append((int(idx), float(1.0 - d)))\n",
+    "            sim = 1.0 - float(d)  # cosine distance -> similarity\n",
+    "            results.append((int(idx), sim))\n",
     "        return results"
    ]
   },
@@ -379,8 +329,8 @@
     "    placeholder=\"Optional: paste a PDF URL (used if no file uploaded)\",\n",
     "    description=\"PDF URL:\"\n",
     ")\n",
-    "chunk_slider = widgets.IntSlider(value=1200, min=400, max=3000, step=100, description=\"Chunk size\")\n",
-    "overlap_slider = widgets.IntSlider(value=200, min=0, max=800, step=50, description=\"Overlap\")\n",
+    "chunk_slider = widgets.IntSlider(value=500, min=200, max=1000, step=100, description=\"Chunk size\")\n",
+    "overlap_slider = widgets.IntSlider(value=100, min=0, max=400, step=50, description=\"Overlap\")\n",
     "topk_slider = widgets.IntSlider(value=5, min=1, max=10, step=1, description=\"Top-K\")\n",
     "load_btn = widgets.Button(description=\"Load PDF\", button_style=\"primary\")\n",
     "prep_btn = widgets.Button(description=\"Preprocess & Chunk\", button_style=\"warning\")\n",
@@ -513,7 +463,7 @@
     "input_box = widgets.Text(placeholder=\"Type a message and press Enter…\")\n",
     "send_btn = widgets.Button(description=\"Send\")\n",
     "\n",
-    "history = []  # list of (user, assistant)\n",
+    "history = []\n",
     "\n",
     "def render_chat():\n",
     "    chat_box.clear_output()\n",
@@ -528,7 +478,7 @@
     "        return\n",
     "    input_box.value = \"\"\n",
     "\n",
-    "    # Generate a reply (switch to a simple echo by replacing the following with: bot_msg = f\\\"Echo: {user_msg}\\\")\n",
+    "    # Generate a reply\n",
     "    context = \"\\n\".join([f\"User: {u}\\nAssistant: {a}\" for u, a in history])\n",
     "    prompt = (context + f\"\\nUser: {user_msg}\\nAssistant:\").strip()\n",
     "\n",
