--- a/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
+++ b/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip -q install google-generativeai pypdf scikit-learn ipywidgets reportlab\n",
+    "!pip -q install pypdf ipywidgets reportlab\n",
     "\n",
     "import os, io, requests, textwrap, tempfile\n",
     "from pathlib import Path\n",
@@ -70,7 +70,7 @@
     "    print(\"Install google-generativeai to enable live calls.\")\n",
     "    _GEMINI_READY = False\n",
     "\n",
-    "GENERATION_MODEL = \"gemini-2.5-flash-lite\"\n",
+    "GENERATION_MODEL = \"gemini-2.5-flash\"\n",
     "EMBED_MODEL      = \"gemini-embedding-001\""
    ]
   },
@@ -428,10 +428,10 @@
     "            m = STATE[\"chunk_meta\"][idx]\n",
     "            snippets.append({\"source\": m[\"source\"], \"page\": m[\"page\"], \"text\": m[\"text\"], \"score\": sim})\n",
     "        context = build_context(snippets)\n",
-    "        answer_out += \"Top matches:\\n\"\n",
-    "        for s in snippets[:3]:\n",
-    "            answer_out += f\"  - p.{s['page']} (sim≈{s['score']:.3f})\\n\"\n",
-    "        answer_out += \"\\nAnswer:\\n\"\n",
+    "        # print(\"Top matches:\")\n",
+    "        # for s in snippets[:3]:\n",
+    "        #     print(f\"  - p.{s['page']} (sim≈{s['score']:.3f})\")\n",
+    "        # print(\"\\nAnswer:\\n\")\n",
     "        ans = answer_with_gemini(q, context)\n",
     "        answer_out += f\"{ans}\\n\"\n",
     "        answer_out += f\"\\nContext used (truncated):\\n{context[:1000]}...\\n\"\n",
