rag_parameter_adjustment

--- a/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
+++ b/LLM1/6_5_RAG_Policy_QA_Colab.ipynb
@@ -329,8 +329,8 @@
     "    placeholder=\"Optional: paste a PDF URL (used if no file uploaded)\",\n",
     "    description=\"PDF URL:\"\n",
     ")\n",
-    "chunk_slider = widgets.IntSlider(value=500, min=200, max=1000, step=100, description=\"Chunk size\")\n",
-    "overlap_slider = widgets.IntSlider(value=100, min=0, max=400, step=50, description=\"Overlap\")\n",
+    "chunk_slider = widgets.IntSlider(value=1000, min=200, max=3000, step=100, description=\"Chunk size\")\n",
+    "overlap_slider = widgets.IntSlider(value=150, min=0, max=500, step=50, description=\"Overlap\")\n",
     "topk_slider = widgets.IntSlider(value=5, min=1, max=10, step=1, description=\"Top-K\")\n",
     "load_btn = widgets.Button(description=\"Load PDF\", button_style=\"primary\")\n",
     "prep_btn = widgets.Button(description=\"Preprocess & Chunk\", button_style=\"warning\")\n",
@@ -494,6 +494,7 @@
     "send_btn.on_click(send_message)\n",
     "input_box.on_submit(send_message)\n",
     "\n",
+    "print(\"Ask questions here:\")\n",
     "display(widgets.VBox([chat_box, widgets.HBox([input_box, send_btn])]))\n",
     "render_chat()"
    ]
