--- a/LLM2/Report_Assistant_GoogleDocs.ipynb
+++ b/LLM2/Report_Assistant_GoogleDocs.ipynb
@@ -21,12 +21,31 @@
    "execution_count": null,
    "id": "ba0d2a64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pf/4wxgq9pj4mb9_08rdhw3v5vr0000gq/T/ipykernel_62925/761107559.py:257: DeprecationWarning: on_submit is deprecated. Instead, set the .continuous_update attribute to False and observe the value changing with: mywidget.observe(callback, 'value').\n",
+      "  connect_btn.on_click(on_connect); create_btn.on_click(on_create); send_btn.on_click(on_send); input_box.on_submit(on_send)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b57a80852d34ab195dcbec8ad30966e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Text(value='GenAI strategy for customer support', description='Topic'), Text(val…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "\n",
-    "# bootstrap: fetch or define the assistant logic inline (no external fetch needed)\n",
-    "# You can expand this cell if you'd like to inspect or customize anything.\n",
-    "\n",
     "GEMINI_MODEL = \"gemini-2.5-flash\"\n",
     "GEMINI_API_KEY = None\n",
     "CLIENT_SECRETS_JSON = None\n",
@@ -164,7 +183,7 @@
     "            return js\n",
     "        raise RuntimeError(\"No actions returned.\")\n",
     "    except Exception as e:\n",
-    "        return {\"actions\":[{\"type\":\"append_text\",\"args\":{\"text\": \"\\n\\n\"+user_msg}}], \"_note\": f\"fallback: {e}\"}}\n",
+    "        return {\"actions\":[{\"type\":\"append_text\",\"args\":{\"text\": \"\\n\\n\"+user_msg}}], \"_note\": f\"fallback: {e}\"}\n",
     "\n",
     "def execute_actions(helper, actions, state):\n",
     "    out=[]; doc_id=state.get(\"doc_id\"); file_id=state.get(\"file_id\"); link=state.get(\"link\")\n",
@@ -299,13 +318,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.13.7)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.x"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
