--- a/LLM2/Report_Assistant_GoogleDocs.ipynb
+++ b/LLM2/Report_Assistant_GoogleDocs.ipynb
@@ -169,6 +169,10 @@
     "        self.drive.comments().create(fileId=file_id, body={\"content\": content}).execute()\n",
     "        self._log({\"event\":\"add_comment\",\"fileId\":file_id})\n",
     "\n",
+    "def _insert_toc_placeholder(self, doc_id):\n",
+    "    self.append_text(doc_id, \"\\n\\nContents\\n(Add a real Table of contents via Docs UI: Insert → Table of contents)\\n\\n\")\n",
+    "GDocsHelper.insert_toc = _insert_toc_placeholder\n",
+    "\n",
     "def plan_actions(user_msg, topic=None):\n",
     "    try:\n",
     "        model = ensure_gemini_model()\n",
